--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/khasogi27/hotel-reservation#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "pg": "^8.4.1",
     "sequelize": "^6.3.5"
   },
