--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "pg": "^8.4.1",
+    "qrcode": "^1.4.4",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
